--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/pkaela123/kp-weather-app">Open-source Code</a>
+    <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
+      >Open-source Code</a
+    >
     <script src="script.js"></script>
   </body>
 </html>
