Added class to outsource link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
+    <a
+      href="https://github.com/pkaela123/kp-weather-app"
+      target="_blank"
+      class="outsource"
       >Open-source Code</a
     >
     <script src="script.js"></script>
