Updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <a
       href="https://github.com/pkaela123/kp-weather-app"
       target="_blank"
-      class="outsource"
+      class="opensource"
       >Open-source Code</a
     >
     <script src="script.js"></script>
