Added a div to hyperlink

--- a/index.html
+++ b/index.html
@@ -112,12 +112,15 @@
         </div>
       </div>
     </div>
-    <a
-      href="https://github.com/pkaela123/kp-weather-app"
-      target="_blank"
-      class="opensource"
-      >Open-source Code</a
-    >
+    <div>
+      <a
+        href="https://github.com/pkaela123/kp-weather-app"
+        target="_blank"
+        class="opensource"
+        >Open-source Code</a
+      >
+      By Kaela Pierce
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
