Updated opensource in HTML

--- a/index.html
+++ b/index.html
@@ -112,11 +112,8 @@
         </div>
       </div>
     </div>
-    <div>
-      <a
-        href="https://github.com/pkaela123/kp-weather-app"
-        target="_blank"
-        class="opensource"
+    <div class="opensource">
+      <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
         >Open-source Code</a
       >
       By Kaela Pierce
