button and temp info id adjustments

--- a/index.html
+++ b/index.html
@@ -30,24 +30,17 @@
               value="Search"
               class="btn btn-outline-secondary btn-sm"
             />
-            <button
-              class="btn btn-outline-secondary btn-sm"
-              id="current-button"
-            >
-              Current
-            </button>
           </form>
           <div class="row">
             <div class="col-6 current-temperature">
-              <h1 id="city">New London, CT</h1>
+              <h1 id="city"></h1>
               <p id="date">Tuesday 11:24</p>
               <h2 id="temperature">
-                7
                 <span class="units">
-                  <a href="#" id="celsius-link">°C</a>
+                  <a href="#" id="celsius-link">°C </a>
                 </span>
               </h2>
-              <p class="tempsun">Sunny ☀️</p>
+              <p id="description">Sunny ☀️</p>
               <p class="highlow">High: 60°F | Low: 42°F</p>
             </div>
             <div class="col-6 weather-details">
