Added required function to search and removed date time

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               placeholder="Enter a city"
               class="form-control-md"
               id="search-city-input"
+              required
             />
             <input
               type="submit"
@@ -34,7 +35,7 @@
           <div class="row">
             <div class="col-6 current-temperature">
               <h1 id="city"></h1>
-              <p id="date">Tuesday 11:24</p>
+              <p id="date">Tuesday</p>
               <h2 id="temperature">
                 <span class="units">
                   <a href="#" id="celsius-link">°C </a>
