--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
                   </div>
                 </div>
     </main>
+    <footer>
     <div class="opensource">
       <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
         >Open-source Code</a
       >
       By Kaela Pierce
     </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
