Added City Name and weather details in paragraph elements

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </header>
     <main>
       <h1> City Name</h1>
+      <p>Tuesday 3:45pm</p>
+      <p>Humidity: 45%, Wind: 10mph
+        <br/>
+        Sunrise: 7:02am, Sunset: 4:21pm
+      </p>
+      
         <div class="card weekdays">
             <div class="card-body weekBoxEdit">
               <div class="row">
