--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br/>
         Sunrise: 7:02am, Sunset: 4:21pm
       </p>
-      
+      <div>🌤 36°C</div>
         <div class="card weekdays">
             <div class="card-body weekBoxEdit">
               <div class="row">
