--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
+    <div class="weather-app"> 
     <header>
       <form>
           <input
@@ -91,6 +92,7 @@
       By Kaela Pierce
     </div>
     </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
