Added closing divs and made small css updates

--- a/index.html
+++ b/index.html
@@ -15,83 +15,85 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
-    <div class="weather-app"> 
-    <header>
-      <form>
+    <div class="weather-app">
+      <header>
+        <form>
           <input
-              type="text"
-              placeholder="Enter a city"
-              class="form-control-md"
-              
-              required
-            />
-            <input
-              type="submit"
-              value="Search"
-              class="btn btn-outline-secondary btn-sm"
-            />
-
-      </form>
-    </header>
-    <main>
-      <h1> City Name</h1>
-      <p>Tuesday 3:45pm</p>
-      <p>Humidity: 45%, Wind: 10mph
-        <br/>
-        Sunrise: 7:02am, Sunset: 4:21pm
-      </p>
-      <div>🌤 36°C</div>
+            type="text"
+            placeholder="Enter a city"
+            class="form-control-md"
+            required
+          />
+          <input
+            type="submit"
+            value="Search"
+            class="btn btn-outline-secondary btn-sm"
+          />
+        </form>
+      </header>
+      <main>
+        <h1>City Name</h1>
+        <p>Tuesday 3:45pm</p>
+        <p>
+          Humidity: 45%, Wind: 10mph
+          <br />
+          Sunrise: 7:02am, Sunset: 4:21pm
+        </p>
+        <div>🌤 36°C</div>
         <div class="card weekdays">
-            <div class="card-body weekBoxEdit">
-              <div class="row">
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body">
-                      Monday <br />
-                      ☁️ <br />
-                      64°/42°
-                    </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    Monday <br />
+                    ☁️ <br />
+                    64°/42°
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body">
-                      Tuesday <br />
-                      🌧
-                      <br />
-                      66°/55°
-                    </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    Tuesday <br />
+                    🌧
+                    <br />
+                    66°/55°
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body">
-                      Wednesday
-                      <br />
-                      ☀️ <br />
-                      70°/49°
-                    </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    Wednesday
+                    <br />
+                    ☀️ <br />
+                    70°/49°
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body">
-                      Thursday
-                      <br />
-                      ☀️<br />
-                      63°/43°
-                    </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    Thursday
+                    <br />
+                    ☀️<br />
+                    63°/43°
                   </div>
                 </div>
-    </main>
-    <footer>
-    <div class="opensource">
-      <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
-        >Open-source Code</a
-      >
-      By Kaela Pierce
-    </div>
-    </footer>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="opensource">
+          <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
+            >Open-source Code</a
+          >
+          By Kaela Pierce
+        </div>
+      </footer>
     </div>
     <script src="script.js"></script>
   </body>
