Added form classes and applied css to classes

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
+        <form class="search-form">
           <input
             type="text"
             placeholder="Enter a city"
-            class="form-control-md"
+            class="form-control-md search-form-input"
             required
           />
           <input
             type="submit"
             value="Search"
-            class="btn btn-outline-secondary btn-sm"
+            class="btn btn-outline-secondary btn-sm search-form-button"
           />
         </form>
       </header>
