Added div class to html and updated css

--- a/index.html
+++ b/index.html
@@ -38,14 +38,20 @@
         </form>
       </header>
       <main>
-        <h1>City Name</h1>
-        <p>Tuesday 3:45pm</p>
-        <p>
-          Humidity: 45%, Wind: 10mph
-          <br />
-          Sunrise: 7:02am, Sunset: 4:21pm
-        </p>
-        <div>🌤 36°C</div>
+        <div class="weather-app-data">
+          <div>
+            <h1>City Name</h1>
+            <p>
+              Tuesday 3:45pm
+              <br />
+              Humidity: 45%, Wind: 10mph
+              <br />
+              Sunrise: 7:02am, Sunset: 4:21pm
+            </p>
+          </div>
+          <div>🌤 36°C</div>
+        </div>
+
         <div class="card weekdays">
           <div class="card-body">
             <div class="row">
