Added weather classes and updated css styling

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1>City Name</h1>
-            <p>
+            <h1 class="weather-city">City Name</h1>
+            <p class="weather-details">
               Tuesday 3:45pm
               <br />
               Humidity: 45%, Wind: 10mph
@@ -49,7 +49,7 @@
               Sunrise: 7:02am, Sunset: 4:21pm
             </p>
           </div>
-          <div>🌤 36°C</div>
+          <div class="weather-app-temperature">🌤 36°C</div>
         </div>
 
         <div class="card weekdays">
