Added strong elements and divs and basic css

--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
             <p class="weather-details">
               Tuesday 3:45pm
               <br />
-              Humidity: 45%, Wind: 10mph
+              Humidity: <strong>45%</strong> , Wind: <strong>10mph</strong>
               <br />
-              Sunrise: 7:02am, Sunset: 4:21pm
+              Sunrise: <strong>7:02am</strong>, Sunset: <strong>4:21pm</strong>
             </p>
           </div>
-          <div class="weather-app-temperature">🌤 36°C</div>
+          <div class="weather-app-temperature">
+            <div class="weather-app-icon">🌤</div>
+            <div class="weather-app-valuetemp">36</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
 
         <div class="card weekdays">
