updated opensource links

--- a/index.html
+++ b/index.html
@@ -104,10 +104,18 @@
       </main>
       <footer>
         <div class="opensource">
+          This project was coded by
+          <a href="https://github.com/pkaela123" target="_blank">Kaela Pierce</a
+          >, is open-sourced on
           <a href="https://github.com/pkaela123/kp-weather-app" target="_blank"
-            >Open-source Code</a
+            >Github</a
           >
-          By Kaela Pierce
+          and hosted on
+          <a
+            href="https://illustrious-khapse-d99587.netlify.app/"
+            target="_blank"
+            >Netlify</a
+          >
         </div>
       </footer>
     </div>
