updated forecast divs and css styling

--- a/index.html
+++ b/index.html
@@ -56,48 +56,37 @@
           </div>
         </div>
 
-        <div class="card weekdays">
-          <div class="card-body">
-            <div class="row">
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    Monday <br />
-                    ☁️ <br />
-                    64°/42°
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    Tuesday <br />
-                    🌧
-                    <br />
-                    66°/55°
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    Wednesday
-                    <br />
-                    ☀️ <br />
-                    70°/49°
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    Thursday
-                    <br />
-                    ☀️<br />
-                    63°/43°
-                  </div>
-                </div>
-              </div>
+        <div class="weather-forecast">
+          <div class="forecast-day">
+            <div>Wed</div>
+            <img src="🌤" />
+            <div class="forecast-temperature">
+              <span class="max-temp">51°|</span>
+              <span class="min-temp">38°</span>
+            </div>
+          </div>
+          <div class="forecast-day">
+            <div>Thurs</div>
+            <img src="🌥" />
+            <div class="forecast-temperature">
+              <span class="max-temp">51°|</span>
+              <span class="min-temp">38°</span>
+            </div>
+          </div>
+          <div class="forecast-day">
+            <div>Fri</div>
+            <img src="🌦" />
+            <div class="forecast-temperature">
+              <span class="max-temp">51°|</span>
+              <span class="min-temp">38°</span>
+            </div>
+          </div>
+          <div class="forecast-day">
+            <div>Sat</div>
+            <img src="🌧" />
+            <div class="forecast-temperature">
+              <span class="max-temp">51°|</span>
+              <span class="min-temp">38°</span>
             </div>
           </div>
         </div>
