--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="weather-app-temperature">
             <div class="weather-app-icon">🌤</div>
-            <div class="weather-app-valuetemp">36</div>
+            <div class="weather-app-valuetemp" id="temperature">36</div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
