Added weather detail functioning to js

--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
           <div>
             <h1 class="weather-city" id="city">City Name</h1>
             <p class="weather-details">
-              Tuesday 3:45pm
+              Tuesday 3:45pm, <span id="description"></span>
               <br />
-              Humidity: <strong>45%</strong> , Wind: <strong>10mph</strong>
+              Humidity: <strong id="humidty"></strong> , Wind:
+              <strong>10mph</strong>
               <br />
               Sunrise: <strong>7:02am</strong>, Sunset: <strong>4:21pm</strong>
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-app-icon">🌤</div>
-            <div class="weather-app-valuetemp" id="temperature">36</div>
+            <div class="weather-app-icon"></div>
+            <div class="weather-app-valuetemp" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
