Added windspeed and humidity functionality

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <div>
             <h1 class="weather-city" id="city">City Name</h1>
             <p class="weather-details">
-              Tuesday 3:45pm, <span id="description"></span>
+              <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong id="humidty"></strong> , Wind:
-              <strong>10mph</strong>
+              Humidity: <strong id="humidity"></strong> , Wind:
+              <strong id="wind-speed"></strong>
               <br />
               Sunrise: <strong>7:02am</strong>, Sunset: <strong>4:21pm</strong>
             </p>
