--- a/index.html
+++ b/index.html
@@ -52,44 +52,9 @@
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-app-icon"></div>
+            <div class="weather-app-icon" id="icon"></div>
             <div class="weather-app-valuetemp" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
-          </div>
-        </div>
-
-        <div class="weather-forecast">
-          <div class="forecast-day">
-            <div>Wed</div>
-            <img src="" />
-            <div class="forecast-temperature">
-              <span class="max-temp">51°|</span>
-              <span class="min-temp">38°</span>
-            </div>
-          </div>
-          <div class="forecast-day">
-            <div>Thurs</div>
-            <img src="" />
-            <div class="forecast-temperature">
-              <span class="max-temp">51°|</span>
-              <span class="min-temp">38°</span>
-            </div>
-          </div>
-          <div class="forecast-day">
-            <div>Fri</div>
-            <img src="" />
-            <div class="forecast-temperature">
-              <span class="max-temp">51°|</span>
-              <span class="min-temp">38°</span>
-            </div>
-          </div>
-          <div class="forecast-day">
-            <div>Sat</div>
-            <img src="" />
-            <div class="forecast-temperature">
-              <span class="max-temp">51°|</span>
-              <span class="min-temp">38°</span>
-            </div>
           </div>
         </div>
       </main>
