--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="forecast-date">Wed</div>
+              <img
+                src=" https://openweathermap.org/img/wn/10d@2x.png"
+                width="67px"
+              />
+              <div class="forecast-temperature">
+                <span class="max-temp">51°|</span>
+                <span class="min-temp">38°</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <div class="opensource">
